--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pandas
-plotly
-streamlit
-yfinance
-pandas-datareader
-prophet
-sklearn
+pandas == 2.2.3
+plotly == 5.17.0
+streamlit == 1.26.0
+yfinance == 0.2.32
+pandas-datareader == 0.10.0 
+prophet == 1.1.4
+scikit-learn == 1.4.2
