--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-pandas == 2.2.3
-plotly == 5.17.0
-streamlit == 1.26.0
-yfinance == 0.2.32
-pandas-datareader == 0.10.0 
-prophet == 1.1.4
-scikit-learn == 1.4.2
+streamlit==1.20.0
+pandas==1.5.3
+numpy==1.24.3
+plotly==5.14.1
+scikit-learn==1.3.0
